--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/health
-spring.datasource.username=root
-spring.datasource.password=wsxedc#123
+spring.datasource.url=jdbc:mysql://sql3.freesqldatabase.com/sql3453881
+spring.datasource.username=sql3453881
+spring.datasource.password=GS69y4X9xr
 
 spring.jpa.hibernate.ddl-auto= update
 spring.jpa.show-sql=true
