--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
+# Mysql
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://sql3.freesqldatabase.com/sql3453881
-spring.datasource.username=sql3453881
-spring.datasource.password=GS69y4X9xr
+spring.datasource.url=jdbc:mysql://34.134.188.205:3306/health
+spring.datasource.username=root
+spring.datasource.password=wudijagger
 
 spring.jpa.hibernate.ddl-auto= update
 spring.jpa.show-sql=true
@@ -9,5 +10,16 @@ spring.jpa.show-sql=true
 # JWT Config
 jwt.header=Authorization
 jwt.secret=NThlNjU4YWMtOWJkZS00MDhhLTk4NDctOTM1M2JkNjkwZTg1
-#120·ÖÖÓ
+#120ï¿½ï¿½ï¿½ï¿½
 jwt.expiration=7200000
+
+# Email config
+spring.mail.host=smtp.office365.com
+spring.mail.port=587
+spring.mail.username=legendaryse4450@outlook.com
+spring.mail.password=Wudijagger
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+server.servlet.encoding.charset=UTF-8
+server.servlet.encoding.force-response=true
